fixed jumping compose tweet box

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,8 +15,9 @@ html {
  */
 
 body {
+  margin: 0 auto;
+  width: 450px;
   font-family: 'Roboto Condensed', sans-serif; 
-  margin: 0;
   color: #244751;
   background-color: #eee;
 }
